--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Cyber Forensics Simulator</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser-arcade-physics.min.js"></script>
+    <base href="https://EdoardoManiero.github.io/nome-repository/">
     <style>
         body { margin: 0; }
         .hud {
